--- a/SharedCode/App.Config
+++ b/SharedCode/App.Config
@@ -4,7 +4,6 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
-  
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
@@ -15,7 +14,9 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-	<connectionStrings>
-		<add name="BankManagementSysEntities1" connectionString="metadata=res://*/BankModel.csdl|res://*/BankModel.ssdl|res://*/BankModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=bankmanagementsys.database.windows.net;initial catalog=BankManagementSys;persist security info=True;user id=sqladmin;password=z77smMQEXz;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-	</connectionStrings>
+  <connectionStrings>
+    <add name="BankManagementSysEntities1" connectionString="metadata=res://*/BankModel.csdl|res://*/BankModel.ssdl|res://*/BankModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=bankmanagementsys.database.windows.net;initial catalog=BankManagementSys;persist security info=True;user id=sqladmin;password=z77smMQEXz;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="BankConnection" connectionString="metadata=res://*/BankModel.csdl|res://*/BankModel.ssdl|res://*/BankModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=bankmanagementsys.database.windows.net;initial catalog=BankManagementSys;persist security info=True;user id=sqladmin;password=z77smMQEXz;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="BankDbConnection" connectionString="metadata=res://*/BankModel.csdl|res://*/BankModel.ssdl|res://*/BankModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=bankmanagementsys.database.windows.net;initial catalog=BankManagementSys;persist security info=True;user id=sqladmin;password=z77smMQEXz;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
 </configuration>
