--- a/CustomerUI/CustomerUI.csproj
+++ b/CustomerUI/CustomerUI.csproj
@@ -65,6 +65,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="MakePayment.xaml.cs">
+      <DependentUpon>MakePayment.xaml</DependentUpon>
+    </Compile>
     <Compile Include="MakeTransfer.xaml.cs">
       <DependentUpon>MakeTransfer.xaml</DependentUpon>
     </Compile>
@@ -91,6 +94,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="MakePayment.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MakeTransfer.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
