--- a/SharedCode/packages.config
+++ b/SharedCode/packages.config
@@ -1,4 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EntityFramework" version="6.4.4" targetFramework="net472" />
+  <package id="Syncfusion.Licensing" version="18.4.0.31" targetFramework="net472" />
+  <package id="Syncfusion.Shared.WPF" version="18.4.0.31" targetFramework="net472" />
+  <package id="Syncfusion.Tools.WPF" version="18.4.0.31" targetFramework="net472" />
 </packages>
