--- a/BankManagementSys/packages.config
+++ b/BankManagementSys/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AvalonWizard" version="1.2.0" targetFramework="net472" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net472" />
   <package id="Syncfusion.Compression.Base" version="18.4.0.31" targetFramework="net472" />
   <package id="Syncfusion.Licensing" version="18.4.0.31" targetFramework="net472" />
