--- a/BankManagementSys/packages.config
+++ b/BankManagementSys/packages.config
@@ -2,7 +2,11 @@
 <packages>
   <package id="AvalonWizard" version="1.2.0" targetFramework="net472" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net472" />
+  <package id="MimeKit" version="2.10.1" targetFramework="net472" />
+  <package id="PDFsharp" version="1.50.5147" targetFramework="net472" />
+  <package id="Portable.BouncyCastle" version="1.8.8" targetFramework="net472" />
   <package id="Syncfusion.Compression.Base" version="18.4.0.31" targetFramework="net472" />
   <package id="Syncfusion.Licensing" version="18.4.0.31" targetFramework="net472" />
   <package id="Syncfusion.Pdf.Wpf" version="18.4.0.31" targetFramework="net472" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
 </packages>
