--- a/BankManagementSys/packages.config
+++ b/BankManagementSys/packages.config
@@ -2,7 +2,5 @@
 <packages>
   <package id="AvalonWizard" version="1.2.0" targetFramework="net472" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net472" />
-  <package id="Syncfusion.Compression.Base" version="18.4.0.31" targetFramework="net472" />
-  <package id="Syncfusion.Licensing" version="18.4.0.31" targetFramework="net472" />
-  <package id="Syncfusion.Pdf.Wpf" version="18.4.0.31" targetFramework="net472" />
+  <package id="PDFsharp" version="1.50.5147" targetFramework="net472" />
 </packages>
