--- a/SharedCode/SharedCode.csproj
+++ b/SharedCode/SharedCode.csproj
@@ -129,6 +129,8 @@
       <DependentUpon>BankModel.edmx</DependentUpon>
       <LastGenOutput>BankModel.cs</LastGenOutput>
     </Content>
+    <Resource Include="Images\transfer.png" />
+    <Resource Include="Images\payment.png" />
     <Resource Include="Images\saveAsPDF.png" />
     <Resource Include="Images\clearAll.png" />
     <Resource Include="Images\johnabbottbank.png" />
