added validation to "Update customer info fixed 'view account information'

--- a/SharedCode/SharedCode.csproj
+++ b/SharedCode/SharedCode.csproj
@@ -121,6 +121,7 @@
     <Compile Include="UserType.cs">
       <DependentUpon>BankModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Validation.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.Config" />
