--- a/CustomerUI/CustomerUI.csproj
+++ b/CustomerUI/CustomerUI.csproj
@@ -109,6 +109,9 @@
     <Compile Include="EmailDialog.xaml.cs">
       <DependentUpon>EmailDialog.xaml</DependentUpon>
     </Compile>
+    <Compile Include="ManageAccounts.xaml.cs">
+      <DependentUpon>ManageAccounts.xaml</DependentUpon>
+    </Compile>
     <Compile Include="MyProfile.xaml.cs">
       <DependentUpon>MyProfile.xaml</DependentUpon>
     </Compile>
@@ -120,6 +123,9 @@
     </Compile>
     <Compile Include="SpendingReport.xaml.cs">
       <DependentUpon>SpendingReport.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="SpendReport.xaml.cs">
+      <DependentUpon>SpendReport.xaml</DependentUpon>
     </Compile>
     <Compile Include="TransferPaymentDialog.xaml.cs">
       <DependentUpon>TransferPaymentDialog.xaml</DependentUpon>
@@ -155,6 +161,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="ManageAccounts.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MyProfile.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -168,6 +178,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="SpendingReport.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="SpendReport.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
