--- a/CustomerUI/CustomerUI.csproj
+++ b/CustomerUI/CustomerUI.csproj
@@ -106,6 +106,9 @@
     <Compile Include="BarChart.xaml.cs">
       <DependentUpon>BarChart.xaml</DependentUpon>
     </Compile>
+    <Compile Include="CustProfile.xaml.cs">
+      <DependentUpon>CustProfile.xaml</DependentUpon>
+    </Compile>
     <Compile Include="EmailDialog.xaml.cs">
       <DependentUpon>EmailDialog.xaml</DependentUpon>
     </Compile>
@@ -139,6 +142,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="ClientDashboard.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="CustProfile.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
