--- a/SharedCode/SharedCode.csproj
+++ b/SharedCode/SharedCode.csproj
@@ -156,6 +156,9 @@
       <DependentUpon>BankModel.edmx</DependentUpon>
       <LastGenOutput>BankModel.cs</LastGenOutput>
     </Content>
+    <Resource Include="Images\johnabbottbank2White.png" />
+    <Resource Include="Images\johnabbottbank2.png" />
+    <Resource Include="Images\jabMSv100.png" />
     <Resource Include="Images\percentage.png" />
     <Resource Include="Images\addAccount.png" />
     <Resource Include="Images\logout.png" />
@@ -163,7 +166,6 @@
     <Resource Include="Images\payment.png" />
     <Resource Include="Images\saveAsPDF.png" />
     <Resource Include="Images\clearAll.png" />
-    <Resource Include="Images\johnabbottbank.png" />
     <Resource Include="Images\manageClients.png" />
     <Resource Include="Images\addPerson.png" />
     <Resource Include="Images\exit.png" />
